--- a/TODO
+++ b/TODO
@@ -13,10 +13,6 @@ spj_exec:
 spj_lang:  c / c++ / javascript / go / python
 target_dir:
 
-receive_edit_test_in: 
-receive_edit_test_out: 
-receive_edit_result: 
-
 程序输出
 
 time: 
@@ -26,22 +22,20 @@ status_id:
 compiler: 
 extra: 
 
-spj_mode_compare: argv[1] stdin, argv[2] stdout, argv[3] execout, > result
-spj_mode_interactive: argv[1] stdin, argv[2] stdout, argv[3] result > user stdin
+spj_mode_compare: argv[1] stdin, argv[2] stdout, argv[3] execout > log
+spj_mode_interactive: argv[1] stdin, argv[2] log, argv[3] result > user stdin
 
-is_signaled: sw
-return 0: consult argv[3] for result, if not exist, ac
-return others: use status code
+is_signaled: re
+return 0: ac
+return 1: pe
+return 2: wa
+others: sw
 
 路径：
 临时文件路径 /
 结果路径 
 
-用脚本语言
-
 根路径 /mnt/data/<project_name>/
-
-测试 node C++ 的 fork 
 
 题目数据 /data/<pid>
 用户代码 /code/<pid>/<sid>
